Few fixes for everything to work on small screens

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -22,6 +22,8 @@
   padding-top: $gutter-spacing-sm;
   padding-bottom: $gutter-spacing-sm;
   background-color: $sidebar-color;
+  min-height: 60px;
+  width: 100%;
 
   @include mq(md) {
     flex-wrap: nowrap;
